Login Interface Registration and reset password with the logic